--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-size:      60px;
     margin-bottom:  50px;
-    margin-left:    -4px;
+    // margin-left:    -2px;
     @include single-text-shadow;
     @include max_desktop {
         font-size: 49px;
