--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -96,7 +96,7 @@ a:hover {
     margin: 20px 0 0;
     padding-bottom: 0;
     @include max_tablet {
-        margin: 30px 0 0;
+        margin: 10px 0 0;
     }
     h1{
         @include tablet {
@@ -114,7 +114,6 @@ a:hover {
     margin: 10px;
 }
 .home, .blog, .page-id-21{
-
     .hentry {
         margin: 0;
     }
@@ -139,6 +138,7 @@ a:hover {
         padding-top: 0px;
     }
     > .container {
+        padding: 0;
         @include max_tablet{
             background-color: transparent;
             padding: 15px;
@@ -154,9 +154,11 @@ a:hover {
         }
     }
 }
-.home, .blog, .page-id-21 {
+.home, .blog, .single, .page-id-21 {
     .main-content-inner{
-        margin: 10px; 
+        @include max_tablet{
+            margin: 10px; 
+        }
     }
 }
 .content{
