--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -154,8 +154,10 @@ a:hover {
         }
     }
 }
+
 .home, .blog, .single, .page-id-21 {
     .main-content-inner{
+        margin: 15px;
         @include max_tablet{
             margin: 10px; 
         }
