--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1083,13 +1083,13 @@ section .col-sm-5, section .col-md-6 {
 @media only all and (max-width: 767px) {
   /* line 94, ../scss/_thumbs.scss */
   .thumb-title {
-    min-height: 40px;
+    min-height: 35px;
   }
 }
 @media only all and (max-width: 320px) {
   /* line 94, ../scss/_thumbs.scss */
   .thumb-title {
-    min-height: 40px;
+    min-height: 42px;
   }
 }
 
@@ -1367,48 +1367,52 @@ a:hover {
   }
 }
 
+/* line 159, ../scss/custom.scss */
+.home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
+  margin: 15px;
+}
 @media only all and (max-width: 767px) {
-  /* line 158, ../scss/custom.scss */
+  /* line 159, ../scss/custom.scss */
   .home .main-content-inner, .blog .main-content-inner, .single .main-content-inner, .page-id-21 .main-content-inner {
     margin: 10px;
   }
 }
 
-/* line 164, ../scss/custom.scss */
+/* line 166, ../scss/custom.scss */
 .content {
   margin-left: 15px;
   margin-right: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 164, ../scss/custom.scss */
+  /* line 166, ../scss/custom.scss */
   .content {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
-/* line 175, ../scss/custom.scss */
+/* line 177, ../scss/custom.scss */
 .image img {
   width: 100% !important;
   height: auto !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 172, ../scss/custom.scss */
+  /* line 174, ../scss/custom.scss */
   .image {
     width: 100%;
   }
-  /* line 182, ../scss/custom.scss */
+  /* line 184, ../scss/custom.scss */
   .image img {
     width: 100% !important;
   }
 }
 
-/* line 188, ../scss/custom.scss */
+/* line 190, ../scss/custom.scss */
 .search, .error404 {
   padding: 60px;
 }
 
-/* line 192, ../scss/custom.scss */
+/* line 194, ../scss/custom.scss */
 #avatar {
   width: 17px;
   height: 17px;
@@ -1416,24 +1420,24 @@ a:hover {
   margin-right: 13px;
 }
 
-/* line 199, ../scss/custom.scss */
+/* line 201, ../scss/custom.scss */
 .col-content {
   padding-left: 0px;
   padding-right: 50px;
   overflow: hidden;
 }
-/* line 204, ../scss/custom.scss */
+/* line 206, ../scss/custom.scss */
 .col-content ul {
   list-style: disc !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 199, ../scss/custom.scss */
+  /* line 201, ../scss/custom.scss */
   .col-content {
     padding-right: 40px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 199, ../scss/custom.scss */
+  /* line 201, ../scss/custom.scss */
   .col-content {
     padding-right: 0;
   }
@@ -1442,18 +1446,18 @@ a:hover {
 /* 
  *  Sidebar
  */
-/* line 221, ../scss/custom.scss */
+/* line 223, ../scss/custom.scss */
 .sidebar {
   padding: 20px;
   margin-top: 20px;
   background-color: black;
 }
-/* line 227, ../scss/custom.scss */
+/* line 229, ../scss/custom.scss */
 .sidebar h3 {
   padding: 0 0 10px;
   margin: 0 !important;
 }
-/* line 231, ../scss/custom.scss */
+/* line 233, ../scss/custom.scss */
 .sidebar .nav > li > a {
   padding: 10px 0;
 }
@@ -1461,7 +1465,7 @@ a:hover {
 /* 
  *  Modal
  */
-/* line 242, ../scss/custom.scss */
+/* line 244, ../scss/custom.scss */
 .modal {
   top: 10%;
 }
@@ -1469,16 +1473,16 @@ a:hover {
 /* 
  *  Soliloquy Slider 
  */
-/* line 252, ../scss/custom.scss */
+/* line 254, ../scss/custom.scss */
 .soliloquy-container img {
   width: 100%;
   height: auto;
 }
-/* line 256, ../scss/custom.scss */
+/* line 258, ../scss/custom.scss */
 .soliloquy-container .soliloquy-direction-nav {
   display: block !important;
 }
-/* line 259, ../scss/custom.scss */
+/* line 261, ../scss/custom.scss */
 .soliloquy-container .soliloquy-control-nav, .soliloquy-container .soliloquy-prev, .soliloquy-container .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
@@ -1487,7 +1491,7 @@ a:hover {
   -o-transition: opacity, 0.5s;
   transition: opacity, 0.5s;
 }
-/* line 264, ../scss/custom.scss */
+/* line 266, ../scss/custom.scss */
 .soliloquy-container:hover .soliloquy-control-nav, .soliloquy-container:hover .soliloquy-prev, .soliloquy-container:hover .soliloquy-next {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
@@ -1497,7 +1501,7 @@ a:hover {
   transition: opacity, 0.5s;
 }
 
-/* line 271, ../scss/custom.scss */
+/* line 273, ../scss/custom.scss */
 .design-slider {
   margin: 26px 0;
 }
@@ -1506,13 +1510,13 @@ a:hover {
  *  Twitter feed 
  */
 @media only all and (max-width: 991px) {
-  /* line 281, ../scss/custom.scss */
+  /* line 283, ../scss/custom.scss */
   .kmeta {
     font-size: 15px;
   }
 }
 
-/* line 286, ../scss/custom.scss */
+/* line 288, ../scss/custom.scss */
 .ktext {
   line-height: 21px !important;
   margin: 15px 0 !important;
@@ -1522,17 +1526,17 @@ a:hover {
 /* 
  *  Contact Form 
  */
-/* line 298, ../scss/custom.scss */
+/* line 300, ../scss/custom.scss */
 .cscfForm > p {
   margin-bottom: 20px;
 }
-/* line 301, ../scss/custom.scss */
+/* line 303, ../scss/custom.scss */
 .cscfForm label {
   margin-bottom: 10px;
   color: #bf7485;
 }
 
-/* line 307, ../scss/custom.scss */
+/* line 309, ../scss/custom.scss */
 #frmCSCF .btn {
   border: #b12e4f;
   background-color: #b12e4f;
@@ -1542,7 +1546,7 @@ a:hover {
   -o-transition: background-color, 0.25s;
   transition: background-color, 0.25s;
 }
-/* line 312, ../scss/custom.scss */
+/* line 314, ../scss/custom.scss */
 #frmCSCF .btn:hover {
   background-color: #bf7485;
   -webkit-transition: background-color, 0.25s;
@@ -1554,126 +1558,126 @@ a:hover {
 /* 
  *  Media Queries thumbs
  */
-/* line 323, ../scss/custom.scss */
+/* line 325, ../scss/custom.scss */
 .mq-list {
   padding-bottom: 20px;
 }
-/* line 325, ../scss/custom.scss */
+/* line 327, ../scss/custom.scss */
 .mq-list li {
   margin-right: 18px;
   padding: 0;
 }
 @media only all and (max-width: 1199px) {
-  /* line 325, ../scss/custom.scss */
+  /* line 327, ../scss/custom.scss */
   .mq-list li {
     margin-right: 15px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 325, ../scss/custom.scss */
+  /* line 327, ../scss/custom.scss */
   .mq-list li {
     margin-right: 10px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 325, ../scss/custom.scss */
+  /* line 327, ../scss/custom.scss */
   .mq-list li {
     margin-right: 0.9%;
   }
 }
-/* line 340, ../scss/custom.scss */
+/* line 342, ../scss/custom.scss */
 .mq-list .smartphone {
   width: 8.1%;
 }
 @media only all and (min-width: 480px) and (max-width: 767px) {
-  /* line 340, ../scss/custom.scss */
+  /* line 342, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8%;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 340, ../scss/custom.scss */
+  /* line 342, ../scss/custom.scss */
   .mq-list .smartphone {
     width: 8.1%;
   }
 }
-/* line 349, ../scss/custom.scss */
+/* line 351, ../scss/custom.scss */
 .mq-list .tablet {
   width: 19.5%;
 }
 @media only all and (max-width: 767px) {
-  /* line 349, ../scss/custom.scss */
+  /* line 351, ../scss/custom.scss */
   .mq-list .tablet {
     width: 19.4%;
   }
 }
-/* line 355, ../scss/custom.scss */
+/* line 357, ../scss/custom.scss */
 .mq-list .netbook {
   width: 25.9%;
 }
-/* line 358, ../scss/custom.scss */
+/* line 360, ../scss/custom.scss */
 .mq-list .desktop {
   margin-right: 0;
   width: 40.5%;
 }
 
-/* line 364, ../scss/custom.scss */
+/* line 366, ../scss/custom.scss */
 .entry-content {
   padding: 15px 3px;
 }
-/* line 366, ../scss/custom.scss */
+/* line 368, ../scss/custom.scss */
 .entry-content p {
   margin-bottom: 15px;
   text-shadow: 0px 2px 3px black;
 }
 @media only all and (max-width: 991px) {
-  /* line 366, ../scss/custom.scss */
+  /* line 368, ../scss/custom.scss */
   .entry-content p {
     font-size: 15px;
     line-height: 21px;
   }
 }
-/* line 374, ../scss/custom.scss */
+/* line 376, ../scss/custom.scss */
 .entry-content img {
   margin: 10px 0 30px;
 }
 
-/* line 381, ../scss/custom.scss */
+/* line 383, ../scss/custom.scss */
 .credits td {
   padding: 3px !important;
 }
 @media only all and (max-width: 1199px) {
-  /* line 387, ../scss/custom.scss */
+  /* line 389, ../scss/custom.scss */
   .credits td {
     padding: 1px !important;
   }
 }
 
-/* line 393, ../scss/custom.scss */
+/* line 395, ../scss/custom.scss */
 .media, .description {
   margin-bottom: 30px;
 }
 
-/* line 397, ../scss/custom.scss */
+/* line 399, ../scss/custom.scss */
 .media p {
   margin: 0;
 }
-/* line 400, ../scss/custom.scss */
+/* line 402, ../scss/custom.scss */
 .media img {
   margin: 0;
 }
-/* line 404, ../scss/custom.scss */
+/* line 406, ../scss/custom.scss */
 .media object {
   margin-right: 10px !important;
   margin-bottom: 15px !important;
 }
 
-/* line 409, ../scss/custom.scss */
+/* line 411, ../scss/custom.scss */
 .single-design .media {
   border: 1px solid black;
 }
 
-/* line 415, ../scss/custom.scss */
+/* line 417, ../scss/custom.scss */
 .hero-right {
   margin-top: 21px;
   margin-bottom: 40px;
@@ -1684,41 +1688,41 @@ a:hover {
   border-radius: 10px;
 }
 @media only all and (max-width: 767px) {
-  /* line 415, ../scss/custom.scss */
+  /* line 417, ../scss/custom.scss */
   .hero-right {
     margin-bottom: 0;
   }
 }
 
-/* line 424, ../scss/custom.scss */
+/* line 426, ../scss/custom.scss */
 .col-page-left {
   padding: 0 10px 0 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 424, ../scss/custom.scss */
+  /* line 426, ../scss/custom.scss */
   .col-page-left {
     padding: 0;
   }
 }
 
-/* line 433, ../scss/custom.scss */
+/* line 435, ../scss/custom.scss */
 .above-header {
   overflow: visible;
   height: 500px;
 }
 @media only all and (max-width: 767px) {
-  /* line 433, ../scss/custom.scss */
+  /* line 435, ../scss/custom.scss */
   .above-header {
     height: 190px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 433, ../scss/custom.scss */
+  /* line 435, ../scss/custom.scss */
   .above-header {
     height: 175px;
   }
 }
-/* line 444, ../scss/custom.scss */
+/* line 446, ../scss/custom.scss */
 .above-header h1 {
   margin-top: 30px;
   padding: 15px;
@@ -1729,20 +1733,20 @@ a:hover {
   font-size: 75px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 444, ../scss/custom.scss */
+  /* line 446, ../scss/custom.scss */
   .above-header h1 {
     font-size: 65px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 444, ../scss/custom.scss */
+  /* line 446, ../scss/custom.scss */
   .above-header h1 {
     font-size: 49px;
     top: 155px !important;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 444, ../scss/custom.scss */
+  /* line 446, ../scss/custom.scss */
   .above-header h1 {
     font-size: 32px;
     margin-left: 0;
@@ -1753,13 +1757,13 @@ a:hover {
   }
 }
 
-/* line 472, ../scss/custom.scss */
+/* line 474, ../scss/custom.scss */
 #above-header-container {
   height: 100%;
   position: relative;
 }
 
-/* line 480, ../scss/custom.scss */
+/* line 482, ../scss/custom.scss */
 #cherry-blossoms {
   width: 100%;
   height: auto;
@@ -1768,19 +1772,19 @@ a:hover {
   z-index: 21;
 }
 @media only all and (max-width: 767px) {
-  /* line 480, ../scss/custom.scss */
+  /* line 482, ../scss/custom.scss */
   #cherry-blossoms {
     position: fixed;
   }
 }
 
-/* line 491, ../scss/custom.scss */
+/* line 493, ../scss/custom.scss */
 .page-id-21 #cherry-blossoms {
   z-index: 999;
 }
 
 @media only all and (max-width: 767px) {
-  /* line 496, ../scss/custom.scss */
+  /* line 498, ../scss/custom.scss */
   #cb-a, .home #cb-a, .blog #cb-a {
     height: 1100px;
     width: 930px !important;
@@ -1789,14 +1793,14 @@ a:hover {
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 496, ../scss/custom.scss */
+  /* line 498, ../scss/custom.scss */
   #cb-a, .home #cb-a, .blog #cb-a {
     width: 560px !important;
     background-position: -189px -110px !important;
   }
 }
 
-/* line 509, ../scss/custom.scss */
+/* line 511, ../scss/custom.scss */
 #cb-a {
   background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom-shadow.png?1389436022');
   background-position: -162px 50px;
@@ -1805,65 +1809,65 @@ a:hover {
   width: 100%;
 }
 @media only all and (max-width: 1199px) {
-  /* line 509, ../scss/custom.scss */
+  /* line 511, ../scss/custom.scss */
   #cb-a {
     background-position: -370px 50px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 509, ../scss/custom.scss */
+  /* line 511, ../scss/custom.scss */
   #cb-a {
     background-position: -490px 50px;
   }
 }
 
-/* line 528, ../scss/custom.scss */
+/* line 530, ../scss/custom.scss */
 .home #cb-a {
   background-position: -550px 13px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 528, ../scss/custom.scss */
+  /* line 530, ../scss/custom.scss */
   .home #cb-a {
     background-position: -650px 20px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 528, ../scss/custom.scss */
+  /* line 530, ../scss/custom.scss */
   .home #cb-a {
     background-position: -750px 20px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 528, ../scss/custom.scss */
+  /* line 530, ../scss/custom.scss */
   .home #cb-a {
     width: 740px !important;
     background-position: -276px -90px !important;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 544, ../scss/custom.scss */
+  /* line 546, ../scss/custom.scss */
   .home .entry-content {
     padding: 0;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 544, ../scss/custom.scss */
+  /* line 546, ../scss/custom.scss */
   .home .entry-content {
     margin-top: -15px;
   }
 }
-/* line 552, ../scss/custom.scss */
+/* line 554, ../scss/custom.scss */
 .home .main-content-inner span {
   color: #bf7485;
 }
 @media only all and (max-width: 479px) {
-  /* line 555, ../scss/custom.scss */
+  /* line 557, ../scss/custom.scss */
   .home .above-header {
     height: 285px;
   }
 }
 
-/* line 564, ../scss/custom.scss */
+/* line 566, ../scss/custom.scss */
 .blog #cb-a {
   background-position: 70% -84px;
 }
@@ -1871,7 +1875,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 574, ../scss/custom.scss */
+/* line 576, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
