--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -182,6 +182,7 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 h1 {
   font-size: 60px;
   margin-bottom: 50px;
+  margin-left: -2px;
   text-shadow: 0px 2px 3px black;
 }
 @media only all and (max-width: 1199px) {
@@ -224,7 +225,7 @@ h3 {
 /* line 76, ../scss/_typography.scss */
 h3 i {
   margin-right: 5px;
-  margin-top: 1px;
+  margin-top: 2px;
   color: #60192b;
 }
 
