--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-size:      60px;
     margin-bottom:  50px;
-    // margin-left:    -2px;
+    margin-left:    -2px;
     @include single-text-shadow;
     @include max_desktop {
         font-size: 49px;
@@ -75,7 +75,7 @@ h3 {
 
     i {
         margin-right: 5px;
-        margin-top: 1px;
+        margin-top: 2px;
         color: darken($red, 20%);
     }
 }
