--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -110,6 +110,12 @@ a:hover {
         }
     }
 }
+.single .page-header h1 {
+    @include max_tablet {
+        text-align: left;
+        margin: 30px 0 0;
+    }
+}
 .hentry {
     margin: 10px;
 }
