--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -196,7 +196,7 @@ h1 {
   /* line 45, ../scss/_typography.scss */
   h1 {
     font-size: 47px;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
   }
 }
 /* line 58, ../scss/_typography.scss */
@@ -1306,7 +1306,7 @@ a:hover {
   /* line 113, ../scss/custom.scss */
   .single .page-header h1 {
     text-align: left;
-    margin: 30px 0 0;
+    margin: 10px 0 20px;
   }
 }
 
