--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -113,7 +113,7 @@ a:hover {
 .single .page-header h1 {
     @include max_tablet {
         text-align: left;
-        margin: 30px 0 0;
+        margin: 10px 0 20px;
     }
 }
 .hentry {
