--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -177,6 +177,11 @@ button {
     border-color:       lighten($info, 13%);
     @include transition(background-color, 0.5s);
 }
+.btn-block{
+    margin-bottom: 20px;
+    color: black;
+    font-size: 100%;
+}
 
 //  Affix
 
@@ -246,21 +251,6 @@ button {
             content: "\00bb ";
             color: $red;
         }
-    }
-}
-
-#calendar_wrap {
-    padding: 0;
-
-    .table-striped > tbody > tr:nth-child(odd) > td, .table-striped > tbody > tr:nth-child(odd) > th {
-        background-color: #222;
-    }
-    .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
-        border-top: 1px solid #444;
-    }
-    caption{
-        color: $blue;
-        margin-bottom: 10px;
     }
 }
 
