--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,7 +1,12 @@
+@import "responsive";
+
 /* Nav */
 $masthead_height:   600px;
 $nav_height:        50px;
 $use_shadows:       false;
+
+$max_thumb: $pager + 100;
+
 
 /* Body */
 $section_height: 700px;
