--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -460,7 +460,18 @@ button {
   margin-right: 15px !important;
 }
 
-/* line 147, ../scss/_navbar.scss */
+/* line 148, ../scss/_navbar.scss */
+.btn a {
+  text-transform: uppercase;
+  color: white;
+}
+/* line 151, ../scss/_navbar.scss */
+.btn a:hover {
+  color: white;
+  text-decoration: none;
+}
+
+/* line 157, ../scss/_navbar.scss */
 .btn-primary {
   background-color: #bf7485;
   border-color: #bf7485;
@@ -470,7 +481,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 152, ../scss/_navbar.scss */
+/* line 162, ../scss/_navbar.scss */
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
   background-color: #d4a1ad;
   border-color: #d4a1ad;
@@ -481,7 +492,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 159, ../scss/_navbar.scss */
+/* line 169, ../scss/_navbar.scss */
 .btn-danger {
   background-color: #b12e4f;
   border-color: #b12e4f;
@@ -491,7 +502,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 164, ../scss/_navbar.scss */
+/* line 174, ../scss/_navbar.scss */
 .btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active {
   background-color: #d15070;
   border-color: #d15070;
@@ -501,7 +512,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 170, ../scss/_navbar.scss */
+/* line 180, ../scss/_navbar.scss */
 .btn-info {
   background-color: #555555;
   border-color: #555555;
@@ -511,7 +522,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 175, ../scss/_navbar.scss */
+/* line 185, ../scss/_navbar.scss */
 .btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active {
   background-color: #767676;
   border-color: #767676;
@@ -521,20 +532,20 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 180, ../scss/_navbar.scss */
+/* line 190, ../scss/_navbar.scss */
 .btn-block {
   margin-bottom: 20px;
   color: black;
   font-size: 100%;
 }
 
-/* line 188, ../scss/_navbar.scss */
+/* line 198, ../scss/_navbar.scss */
 .affix {
   top: 0;
 }
 
 @media only all and (max-width: 767px) {
-  /* line 191, ../scss/_navbar.scss */
+  /* line 201, ../scss/_navbar.scss */
   .affix-top {
     position: fixed;
     top: 0;
@@ -542,23 +553,23 @@ button {
 }
 
 @media only all and (max-width: 767px) {
-  /* line 198, ../scss/_navbar.scss */
+  /* line 208, ../scss/_navbar.scss */
   .single .affix, .single .affix-top {
     position: static;
   }
 }
 
-/* line 208, ../scss/_navbar.scss */
+/* line 218, ../scss/_navbar.scss */
 .footer-widgets .nav {
   margin-top: 0px;
 }
-/* line 211, ../scss/_navbar.scss */
+/* line 221, ../scss/_navbar.scss */
 .footer-widgets .widget {
   border-left: 1px dashed #222;
   padding: 0 23px;
   margin-top: 30px;
 }
-/* line 215, ../scss/_navbar.scss */
+/* line 225, ../scss/_navbar.scss */
 .footer-widgets .widget h2 {
   font-family: "Dosis", sans-serif !important;
   font-size: 110%;
@@ -567,37 +578,37 @@ button {
   letter-spacing: 3px;
 }
 @media only all and (max-width: 767px) {
-  /* line 211, ../scss/_navbar.scss */
+  /* line 221, ../scss/_navbar.scss */
   .footer-widgets .widget {
     padding: 0;
     margin-top: 30px;
     border-left: 0;
   }
 }
-/* line 228, ../scss/_navbar.scss */
+/* line 238, ../scss/_navbar.scss */
 .footer-widgets .widget:first-child {
   border-left: 0;
 }
 @media only all and (max-width: 767px) {
-  /* line 231, ../scss/_navbar.scss */
+  /* line 241, ../scss/_navbar.scss */
   .footer-widgets .widget:last-child {
     padding: 0;
     margin-top: 0;
   }
 }
-/* line 238, ../scss/_navbar.scss */
+/* line 248, ../scss/_navbar.scss */
 .footer-widgets ul {
   padding: 0;
   list-style: none;
   list-style-type: none;
 }
-/* line 243, ../scss/_navbar.scss */
+/* line 253, ../scss/_navbar.scss */
 .footer-widgets .menu-item {
   margin: 3px 0;
   text-transform: uppercase;
   font-size: 115%;
 }
-/* line 248, ../scss/_navbar.scss */
+/* line 258, ../scss/_navbar.scss */
 .footer-widgets .menu-item:before {
   margin-left: 10px;
   margin-right: 5px;
@@ -605,82 +616,18 @@ button {
   color: #b12e4f;
 }
 
-/* line 258, ../scss/_navbar.scss */
+/* line 268, ../scss/_navbar.scss */
 #footer-menu li {
   width: 100%;
 }
 
-/* line 262, ../scss/_navbar.scss */
+/* line 272, ../scss/_navbar.scss */
 #root-footer, #footer {
   height: auto;
 }
-/* line 264, ../scss/_navbar.scss */
+/* line 274, ../scss/_navbar.scss */
 #root-footer p, #footer p {
   color: #666;
-}
-
-/* 
- *  Kebo Tweets
- */
-/* line 281, ../scss/_navbar.scss */
-.kebo-tweets a.kaccount, .kebo-tweets a.kdate {
-  font-size: 96% !important;
-}
-
-/*  
- *  Mailchimp Email Signup 
- */
-/* line 292, ../scss/_navbar.scss */
-#mc_signup {
-  padding: 0 !important;
-}
-/* line 294, ../scss/_navbar.scss */
-#mc_signup .mergeRow {
-  display: none !important;
-  padding: 0 !important;
-}
-/* line 298, ../scss/_navbar.scss */
-#mc_signup form {
-  padding: 0 !important;
-}
-
-/* line 302, ../scss/_navbar.scss */
-#mc_signup_submit {
-  margin-top: 0;
-  width: 100% !important;
-  background: #b12e4f;
-  padding: 10px;
-  margin-top: 0 !important;
-  border: 0;
-  color: white;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -o-border-radius: 2px;
-  border-radius: 2px;
-  -webkit-transition: background-color, 0.25s;
-  -moz-transition: background-color, 0.25s;
-  -o-transition: background-color, 0.25s;
-  transition: background-color, 0.25s;
-}
-/* line 312, ../scss/_navbar.scss */
-#mc_signup_submit:hover {
-  background-color: #d15070;
-  -webkit-transition: background-color, 0.25s;
-  -moz-transition: background-color, 0.25s;
-  -o-transition: background-color, 0.25s;
-  transition: background-color, 0.25s;
-}
-
-/* line 317, ../scss/_navbar.scss */
-.mc_success_msg {
-  color: #bf7485;
-}
-
-/* line 320, ../scss/_navbar.scss */
-#mc_message {
-  margin-bottom: 15px;
-  margin-top: -2px;
 }
 
 /*
