--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -144,6 +144,16 @@
 button {
     margin-right: 15px !important;
 }
+.btn {
+    a {
+        text-transform: uppercase;
+        color: white;
+        &:hover {
+            color: white;
+            text-decoration: none;
+        }
+    }
+}
 .btn-primary {
     background-color:   $blue;
     border-color:       $blue;
@@ -269,55 +279,3 @@ button {
     @extend %opaqueBg;
 }
 // @include sticky-footer(300px, "#root", "#root-footer", "#footer");
-
-
-
-
-/* 
- *  Kebo Tweets
- */
-
- .kebo-tweets {
-    a.kaccount, a.kdate {
-        font-size: 96% !important;
-    }
- }
-
-
-
-/*  
- *  Mailchimp Email Signup 
- */
-
-#mc_signup {
-    padding: 0 !important;
-    .mergeRow {
-        display: none !important;
-        padding: 0 !important;
-    }    
-    form {
-        padding: 0 !important;
-    }
-}
-#mc_signup_submit {
-    margin-top: 0;
-    width: 100% !important;
-    background: $red;
-    padding: 10px;
-    margin-top: 0 !important;
-    border: 0;
-    color: white;
-    @include border-radius(2px);
-    @include transition(background-color, 0.25s);
-    &:hover {
-        background-color: lighten($red, 13%);
-        @include transition(background-color, 0.25s);
-    }
-}
-.mc_success_msg {
-    color: $blue;
-}
-#mc_message {
-    margin-bottom: 15px;
-    margin-top: -2px;
-}
